<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    tools:context=".activity_formulario">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDataAbastecimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/lbl_data_abastecimento"
            android:onClick="selecionarData" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLAbastecidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_litros_abastecidos" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etKMTotVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_quilometragem_total_veiculo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="193dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/spPostos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintTop_toTopOf="parent"
            app:ms_enableFloatingLabel="true"
            app:ms_hint="Posto abastecido:" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="excluir"
        android:text="@string/btn_excluir"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Spinner" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="177dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:onClick="salvarAbastecimento"
        android:text="@string/btn_salvar"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExcluir" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginTop="94dp"
        android:layout_marginBottom="249dp"
        android:layout_weight="1"
        android:onClick="openCamera"
        android:text="@string/lbl_camera"
        app:layout_constraintBottom_toBottomOf="@+id/btnSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="302dp"
        android:layout_height="148dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

</androidx.constraintlayout.widget.ConstraintLayout>

